cmake_minimum_required(VERSION 3.10)
project(ptk_tests C)

# Only add tests if this is the root project
if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    enable_testing()
    add_executable(test_ptk_log test_ptk_log.c)
    add_executable(test_ptk_scratch test_ptk_scratch.c)
    add_executable(test_ptk_event test_ptk_event.c)
    add_executable(test_ptk_serialization test_ptk_serialization.c)
    add_executable(test_ptk_slice test_ptk_slice.c)
    add_executable(test_ptk_types test_ptk_types.c)
    add_executable(test_ptk_pdu test_ptk_pdu.c)
    add_executable(test_ptk_h test_ptk_h.c)

    target_link_libraries(test_ptk_log PRIVATE ptk)
    target_link_libraries(test_ptk_scratch PRIVATE ptk)
    target_link_libraries(test_ptk_event PRIVATE ptk)
    target_link_libraries(test_ptk_serialization PRIVATE ptk)
    target_link_libraries(test_ptk_slice PRIVATE ptk)
    target_link_libraries(test_ptk_types PRIVATE ptk)
    target_link_libraries(test_ptk_pdu PRIVATE ptk)
    target_link_libraries(test_ptk_h PRIVATE ptk)

    add_test(NAME test_ptk_log COMMAND test_ptk_log)
    add_test(NAME test_ptk_scratch COMMAND test_ptk_scratch)
    add_test(NAME test_ptk_event COMMAND test_ptk_event)
    add_test(NAME test_ptk_serialization COMMAND test_ptk_serialization)
    add_test(NAME test_ptk_slice COMMAND test_ptk_slice)
    add_test(NAME test_ptk_types COMMAND test_ptk_types)
    add_test(NAME test_ptk_pdu COMMAND test_ptk_pdu)
    add_test(NAME test_ptk_h COMMAND test_ptk_h)
endif()
